--- a/language/prompts/examples/question_answering.ipynb
+++ b/language/prompts/examples/question_answering.ipynb
@@ -840,15 +840,15 @@
    "toc_visible": true
   },
   "environment": {
-   "kernel": "python3",
-   "name": "tf2-gpu.2-11.m108",
+   "kernel": "conda-root-py",
+   "name": "workbench-notebooks.m113",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-11:m108"
+   "uri": "gcr.io/deeplearning-platform-release/workbench-notebooks:m113"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (ipykernel) (Local)",
    "language": "python",
-   "name": "python3"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -860,7 +860,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
